# internal/server/grpc.go
@@ -1,8 +1,8 @@
 package server
 
 import (
-	v1 "review/api/review/v1"
 	ai_v1 "review/api/ai/v1"
+	v1 "review/api/review/v1"
 	user_v1 "review/api/user/v1"
 	"review/internal/conf"
 	"review/internal/service"
@@ -14,7 +14,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, review *service.ReviewService, aiAgent *service.AIAgentService, user *service.UserService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, review *service.ReviewService, agent *service.AgentService, user *service.UserService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -32,7 +32,7 @@ func NewGRPCServer(c *conf.Server, review *service.ReviewService, aiAgent *servi
 	}
 	srv := grpc.NewServer(opts...)
 	v1.RegisterReviewServer(srv, review)
-	ai_v1.RegisterAIAgentServer(srv, aiAgent)
+	ai_v1.RegisterAgentServiceServer(srv, agent)
 	user_v1.RegisterUserServer(srv, user)
 	return srv
 }
